2.0.4 - 2017-05-24 mgk25

 . Fix handling of directive "ErrorDocument 401 ..." on Apache 2.4.13 or later

2.0.3 - 2017-05-27 mcv21

 . Updated Ubuntu packaging

2.0.2 - 2015-03-11 mcv21

 . Restrict kid to be 1-8 digits, not beginning with a 0.

   gr348 reported a directory-traversal vulnerability in
   mod_ucam_webauth, since thile the code removes '/' from the 'kid'
   field, it does not remove any other path-separator characters
   (e.g. '\' on Windows). In the light of this, the specification of
   the 'kid' field in the ucamwebauth protocol has been tightened up,
   and mod_ucam_webauth now enforces this new, stricter definition.

2.0.1.1 - 2014-11-11 mcv21

 . Set AAPRINCIPAL as well as AAPrincipal (to match documentation)

 . Correct documentation to note that Raven sets "current" not "Current"

 . Ubuntu and Debian packaging for Apache 2.4 support

2.0.1 - 2014-01-09 mcv21

 . Set HttpOnly attribute in cookies

   This tells browsers to only expose this cookie during an http(s)
   request, and not, for example, to javascript code. This helps to
   reduce the possibility of cross-site scripting attacks.

 . Add the AACookieForceSecure directive

   Mod_ucam_webauth sets the "secure" attribute in the session cookie
   when it is invoked over https. Under some specialised
   circumstances, you may wish to force it to set this attribute when
   invoked over http. This directive lets you do so.

2.0.0 - 2013-06-18 mcv21

 . Add support for Ucam WebAuth protocol version 3

   Protocol version 3 includes support for "ptags"; these are a set of
   tags that may apply to a user. The only ptag in use at the moment
   is "Current", which means that the authenticated user is a current
   student or member of staff. The default behaviour is to require
   this ptag to be set, which is the same behaviour as was seen with
   version 2 of the protocol (for which the server will only
   authenticate current staff and students). If you might want to