@@ -1,3 +1,8 @@
+
+ . Drop override of Apache's misleading default 401 page text, and
+   recommend to use "AuthzSendForbiddenOnFailure On" instead
+   (available since Apache 2.3.11).
+
 2.0.4 - 2017-05-24 mgk25
 
  . Fix handling of directive "ErrorDocument 401 ..." on Apache 2.4.13 or later
